# Game

./: .gitignore  Badge.cpp  Badge.h  BaseClock.h  CMakeLists.txt  ClassRoom.cpp  ClassRoom.h  CollisionObserver.h  CollisionSubject.h  Def.h  DynamicComponent.cpp  DynamicComponent.h  Enemy.cpp  Enemy.h  Factory.cpp  Factory.h  FakeClock.cpp  FakeClock.h  Follow.cpp  Follow.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameOver.cpp  GameOver.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  HallShape.cpp  HallShape.h  Inventory.cpp  Inventory.h  MainMenu.cpp  MainMenu.h  Map.cpp  Map.h  (+48 more)
assets/: MAP1.txt  MAP2.txt  MAP3.txt  colMap.txt  colMap2.txt  colMap3.txt  map1.txt  map2.txt  map2_v2.txt  map2_v3.txt  map3.txt  map4.txt  schoolMap.tmx  schoolMap.txt
assets/16 bit School Asset Pack (Free)/32x32/: mappa.xcf
assets/music/: token.flac  win.flac
test/: BadgeTest.cpp  CMakeLists.txt  CollisionTest.cpp  RandomMoveTest.cpp  RandomSpawnTest.cpp  StrategyTest.cpp  TileMapCollisionTest.cpp  WeaponDirectionTest.cpp  WeaponTest.cpp  runAllTests.cpp
test/lib/googletest/docs/: advanced.md  faq.md
test/lib/googletest/include/gtest/: gtest.h
test/lib/googletest/include/gtest/internal/: gtest-type-util.h  gtest-type-util.h.pump
test/lib/googletest/make/: Makefile
test/lib/googletest/src/: gtest.cc
test/lib/googletest/test/: googletest-output-test-golden-lin.txt
